using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;
using System.Windows.Input;

namespace OOPGames
{
    //Any player of any game has to implement this interface
    //DIESES INTERFACE NICHT ÄNDERN!
    public interface IGamePlayer
    {
        //Name of the Game Player: possibly use a unique name
        string Name { get; }

        //Sets the player number of this player; this number should be
        //stored by the implementing class and should be used for any
        //given play move
        void SetPlayerNumber(int playerNumber);

        //Player number set beforehand using SetPlayerNumber
        int PlayerNumber { get; }

        //Returns true, if the given rules can be used together with the implemented player
        bool CanBeRuledBy(IGameRules rules);

        //Returns new object being a clone of the current player
        IGamePlayer Clone();
    }

    //A humman player: the painter produces a selection which has to be validated
    //DIESES INTERFACE NICHT ÄNDERN!
    public interface IHumanGamePlayer : IGamePlayer
    {
        //Returns a valid move if possible for the given selection and 
        //the given state of the play field.
        //IF THE GIVEN SELECTION IS NO VALID MOVE, NULL HAS TO BE RETURNED.
        IPlayMove GetMove(IMoveSelection selection, IGameField field);
    }

    //Extension of IHumanGamePlayer for an EventHandler giving the actual mouse position
    public interface IHumanGamePlayerWithMouse : IHumanGamePlayer
    {
        //function called when mouse moved
        void OnMouseMoved(MouseEventArgs e);
    }

    //A computer player: when asked for a move, a valid move is produced by a computer
    //DIESES INTERFACE NICHT ÄNDERN!
    public interface IComputerGamePlayer : IGamePlayer
    {
        //Returns a valid move for the given state of the play field.
        //IF NO VALID MOVE IS POSSIBLE, NULL HAS TO BE RETURNED.
        IPlayMove GetMove(IGameField field);
    }
}
