@startuml B5 Shellshock Tank Game

' Styling
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam backgroundColor #FEFEFE
skinparam class {
    BackgroundColor<<interface>> LightYellow
    BorderColor<<interface>> Orange
    BackgroundColor<<enum>> LightGray
    BorderColor<<enum>> Gray
    BackgroundColor LightBlue
    BorderColor Blue
}

title B5 Shellshock Tank Game - Complete Implementation

' ===== ENUMS AND CONSTANTS =====

package "Game Enums" {
    enum B5_Shellshock_TankColor {
        Red
        Blue
        --
        Visual identification for each tank
    }
    
    enum B5_Shellshock_TerrainType {
        Flat
        Hill
        Valley
        --
        Different terrain configurations
        affects tank placement and gameplay
    }
}

' ===== GAME FIELD =====

package "Game Field" {
    
    class B5_Shellshock_Tank {
        - _x: double
        - _y: double
        - _angle: double
        - _power: double
        - _health: int
        - _color: B5_Shellshock_TankColor
        --
        + X: double {get; set}
        + Y: double {get; set}
        + Angle: double {get; set}
        + Power: double {get; set}
        + Health: int {get; set}
        + Color: B5_Shellshock_TankColor {get}
        + IsAlive: bool {get}
        --
        + B5_Shellshock_Tank(x, y, color)
        + TakeDamage(damage: int): void
        + MoveLeft(distance: double): void
        + MoveRight(distance: double): void
        + AdjustAngle(delta: double): void
        + AdjustPower(delta: double): void
        --
        Represents a single tank.
        Stores position, shooting angle,
        power, and health status.
    }
    
    class B5_Shellshock_Projectile {
        - _x: double
        - _y: double
        - _velocityX: double
        - _velocityY: double
        - _isActive: bool
        - _playerNumber: int
        --
        + X: double {get; set}
        + Y: double {get; set}
        + VelocityX: double {get; set}
        + VelocityY: double {get; set}
        + IsActive: bool {get; set}
        + PlayerNumber: int {get}
        --
        + B5_Shellshock_Projectile(x, y, angle, power, playerNumber)
        + UpdatePosition(gravity: double, deltaTime: double): void
        + CheckCollision(terrain, tanks): bool
        --
        Represents a fired shell in flight.
        Updates position based on physics.
    }
    
    class B5_Shellshock_Terrain {
        - _heightMap: double[]
        - _width: int
        - _terrainType: B5_Shellshock_TerrainType
        --
        + HeightMap: double[] {get}
        + Width: int {get}
        + TerrainType: B5_Shellshock_TerrainType {get}
        --
        + B5_Shellshock_Terrain(width, terrainType)
        + GetHeightAt(x: double): double
        + IsCollision(x: double, y: double): bool
        + DestroyTerrain(x: double, radius: double): void
        --
        Represents the ground/battlefield.
        Stores height map for terrain.
        Can be damaged by explosions.
    }
    
    class B5_Shellshock_Field {
        - _tank1: B5_Shellshock_Tank
        - _tank2: B5_Shellshock_Tank
        - _terrain: B5_Shellshock_Terrain
        - _projectile: B5_Shellshock_Projectile
        - _wind: double
        --
        + Tank1: B5_Shellshock_Tank {get}
        + Tank2: B5_Shellshock_Tank {get}
        + Terrain: B5_Shellshock_Terrain {get}
        + Projectile: B5_Shellshock_Projectile {get; set}
        + Wind: double {get; set}
        --
        + B5_Shellshock_Field()
        + CanBePaintedBy(painter: IPaintGame): bool
        + Reset(): void
        + GetTankByPlayer(playerNumber: int): B5_Shellshock_Tank
        --
        IMPLEMENTS: IGameField
        --
        Main game field containing all game objects:
        two tanks, terrain, active projectile, wind.
    }
}

' ===== GAME MOVES =====

package "Game Moves" {
    
    enum B5_Shellshock_ActionType {
        MoveLeft
        MoveRight
        IncreaseAngle
        DecreaseAngle
        IncreasePower
        DecreasePower
        Shoot
        --
        Different actions a player can perform
    }
    
    class B5_Shellshock_Move {
        - _playerNumber: int
        - _actionType: B5_Shellshock_ActionType
        - _value: double
        --
        + PlayerNumber: int {get}
        + ActionType: B5_Shellshock_ActionType {get}
        + Value: double {get}
        --
        + B5_Shellshock_Move(playerNumber, actionType, value)
        --
        IMPLEMENTS: IPlayMove
        --
        Represents a player action:
        movement, angle/power adjustment, or shooting.
    }
}

' ===== GAME RULES =====

package "Game Rules" {
    
    class B5_Shellshock_Rules {
        - _field: B5_Shellshock_Field
        - _currentPlayer: int
        - _gamePhase: GamePhase
        - _projectileInFlight: bool
        - _gravity: double
        - _maxHealth: int
        --
        + Name: string {get}
        + CurrentField: IGameField {get}
        + MovesPossible: bool {get}
        --
        + DoMove(move: IPlayMove): void
        + ClearField(): void
        + CheckIfPLayerWon(): int
        + StartedGameCall(): void
        + TickGameCall(): void
        --
        + GetCurrentPlayer(): int
        --
        IMPLEMENTS: IGameRules, IGameRules2
        --
        Manages game logic:
        - Turn-based tank control
        - Projectile physics simulation
        - Collision detection
        - Win condition: returns 1 or 2 if tank destroyed, -1 otherwise
    }
    
    enum GamePhase {
        Setup
        PlayerTurn
        ProjectileInFlight
        GameOver
        --
        Current state of the game
    }
}

' ===== PAINTER =====

package "Game Painter" {
    
    class B5_Shellshock_Painter {
        - _canvasWidth: int
        - _canvasHeight: int
        - _groundLevel: int
        --
        + Name: string {get}
        --
        + PaintGameField(canvas: Canvas, field: IGameField): void
        + TickPaintGameField(canvas: Canvas, field: IGameField): void
        --
        - DrawTerrain(canvas, terrain): void
        - DrawTank(canvas, tank): void
        - DrawProjectile(canvas, projectile): void
        - DrawUI(canvas, field): void
        - DrawAngleIndicator(canvas, tank): void
        - DrawPowerBar(canvas, tank): void
        - DrawWind(canvas, wind): void
        --
        IMPLEMENTS: IPaintGame2
        --
        Renders all game visuals:
        - Terrain with height map
        - Tanks with color and orientation
        - Flying projectile
        - UI (angle, power, health, wind)
    }
}

' ===== PLAYERS =====

package "Game Players" {
    
    class B5_Shellshock_HumanPlayer {
        - _playerNumber: int
        --
        + Name: string {get}
        + PlayerNumber: int {get}
        --
        + SetPlayerNumber(playerNumber: int): void
        + CanBeRuledBy(rules: IGameRules): bool
        + Clone(): IGamePlayer
        + GetMove(selection: IMoveSelection, field: IGameField): IPlayMove
        --
        - GetMoveFromKey(key: Key, field): IPlayMove
        - GetMoveFromClick(selection: IClickSelection, field): IPlayMove
        --
        IMPLEMENTS: IHumanGamePlayer (extends IGamePlayer)
        --
        Human player controls:
        KEYBOARD:
        - A/D: Move tank left/right
        - W/S: Adjust angle up/down
        - Q/E: Decrease/increase power
        - SPACE: Shoot
        MOUSE:
        - Click on tank to select angle/power
        
        Must return NULL if selection is invalid!
    }
    
    class B5_Shellshock_ComputerPlayer {
        - _playerNumber: int
        - _difficulty: AIDifficulty
        --
        + Name: string {get}
        + PlayerNumber: int {get}
        --
        + SetPlayerNumber(playerNumber: int): void
        + CanBeRuledBy(rules: IGameRules): bool
        + Clone(): IGamePlayer
        + GetMove(field: IGameField): IPlayMove
        --
        - CalculateOptimalAngle(field): double
        - CalculateOptimalPower(field): double
        - SimulateShot(angle, power, field): bool
        - AddRandomError(): double
        --
        IMPLEMENTS: IComputerGamePlayer (extends IGamePlayer)
        --
        AI player that:
        - Calculates trajectory to hit opponent
        - Considers wind and terrain
        - Adjusts for difficulty level
        - Returns NULL if no valid move possible
    }
    
    enum AIDifficulty {
        Easy
        Medium
        Hard
        --
        Affects AI accuracy and calculation
    }
}

' ===== INTERFACE IMPLEMENTATIONS =====

B5_Shellshock_Field ..|> IGameField
B5_Shellshock_Rules ..|> IGameRules
B5_Shellshock_Rules ..|> IGameRules2
B5_Shellshock_Painter ..|> IPaintGame2
B5_Shellshock_Move ..|> IPlayMove
B5_Shellshock_HumanPlayer ..|> IHumanGamePlayer
B5_Shellshock_ComputerPlayer ..|> IComputerGamePlayer

' ===== RELATIONSHIPS =====

' Field contains game objects
B5_Shellshock_Field "1" *-- "2" B5_Shellshock_Tank : contains
B5_Shellshock_Field "1" *-- "1" B5_Shellshock_Terrain : contains
B5_Shellshock_Field "1" o-- "0..1" B5_Shellshock_Projectile : has active

' Rules manages field
B5_Shellshock_Rules "1" *-- "1" B5_Shellshock_Field : manages
B5_Shellshock_Rules --> GamePhase : tracks

' Tank uses color
B5_Shellshock_Tank --> B5_Shellshock_TankColor : has

' Terrain uses type
B5_Shellshock_Terrain --> B5_Shellshock_TerrainType : has

' Move uses action type
B5_Shellshock_Move --> B5_Shellshock_ActionType : specifies

' Painter renders field
B5_Shellshock_Painter ..> B5_Shellshock_Field : renders

' Players create moves
B5_Shellshock_HumanPlayer ..> B5_Shellshock_Move : creates
B5_Shellshock_ComputerPlayer ..> B5_Shellshock_Move : creates
B5_Shellshock_ComputerPlayer --> AIDifficulty : uses

' Players interact with field
B5_Shellshock_HumanPlayer ..> B5_Shellshock_Field : reads
B5_Shellshock_ComputerPlayer ..> B5_Shellshock_Field : analyzes

' ===== FRAMEWORK INTERFACES (Reference) =====

interface IGameField <<interface>> {
    + CanBePaintedBy(painter: IPaintGame): bool
}

interface IGameRules <<interface>> {
    + Name: string {get}
    + CurrentField: IGameField {get}
    + MovesPossible: bool {get}
    + DoMove(move: IPlayMove): void
    + ClearField(): void
    + CheckIfPLayerWon(): int
}

interface IGameRules2 <<interface>> {
    + StartedGameCall(): void
    + TickGameCall(): void
}

interface IPaintGame2 <<interface>> {
    + PaintGameField(canvas: Canvas, field: IGameField): void
    + TickPaintGameField(canvas: Canvas, field: IGameField): void
}

interface IPlayMove <<interface>> {
    + PlayerNumber: int {get}
}

interface IHumanGamePlayer <<interface>> {
    + GetMove(selection: IMoveSelection, field: IGameField): IPlayMove
}

interface IComputerGamePlayer <<interface>> {
    + GetMove(field: IGameField): IPlayMove
}

interface IGamePlayer <<interface>> {
    + Name: string {get}
    + PlayerNumber: int {get}
    + SetPlayerNumber(playerNumber: int): void
    + CanBeRuledBy(rules: IGameRules): bool
    + Clone(): IGamePlayer
}

IHumanGamePlayer --|> IGamePlayer
IComputerGamePlayer --|> IGamePlayer

' ===== NOTES =====

note top of B5_Shellshock_Field
    **Game Field**
    Contains all game state:
    - Two tanks (player 1 and 2)
    - Destructible terrain
    - Active projectile (if any)
    - Environmental factor (wind)
end note

note right of B5_Shellshock_Rules
    **Game Loop**
    1. Player adjusts angle/power or moves
    2. Player shoots
    3. Projectile physics in TickGameCall() (every 40ms)
    4. Check collision with terrain/tank
    5. Apply damage if hit
    6. Switch turns or end game
    
    **Win Condition:**
    CheckIfPLayerWon() returns:
    - 1 if Tank2 destroyed (Player 1 wins)
    - 2 if Tank1 destroyed (Player 2 wins)
    - -1 if game continues
end note

note bottom of B5_Shellshock_Painter
    **Visual Elements**
    - Terrain: drawn as polygon
    - Tanks: rectangles with barrel
    - Projectile: circle
    - UI: angle indicator, power bar,
          health bars, wind arrow
end note

note right of B5_Shellshock_HumanPlayer
    **Controls**
    A/D - Move left/right
    W/S - Angle up/down
    Q/E - Power down/up
    SPACE - Fire!
end note

note top of B5_Shellshock_Move
    **Action System**
    Single move class handles all actions:
    - Movement (left/right)
    - Angle adjustment
    - Power adjustment
    - Shooting
    Value field used for adjustment amounts
end note

@enduml
